resources/webidl2/test/invalid/baseline/const-nullable.txt
Syntax error at line 3, since `interface MyConstants`:
  const boolean? ARE_WE_THERE_YET = false;
               ^ Unexpected nullable constant type
